<resources>
    <string name="app_name">SmartFridge</string>
    <string name="smart">Smart</string>
    <string name="fridge">Fridge</string>
    <string name="app_subtitle">ניהול חכם למטבח שלך</string>
    <string name="login">התחבר</string>
    <string name="register">הירשם</string>
    <string name="home_btn_txt">דף הבית</string>
    <string name="add_product_btn_txt">הוספת מוצר</string>
    <string name="shopping_list_btn_txt">רשימת קניות</string>
    <string name="profile_btn_txt">פרופיל</string>
    <string name="login_page_welcome_to_txt">ברוכים הבאים ל-</string>
    <string name="forgot_password">שכחתי סיסמא</string>
    <string name="for_registration_press_here">להרשמה לחץ כאן</string>
    <string name="you_do_not_have_an_account">אין לך חשבון?</string>
    <string name="first_name">שם פרטי</string>
    <string name="last_name">שם משפחה</string>
    <string name="email">אימייל</string>
    <string name="user_name">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="confirm_password">אימות סיסמא</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="show_all_inventory">הצג הכל</string>
    <string name="search_product_in_inventory">חיפוש מוצר במלאי הבית</string>
    <string name="take_me_to_super_market">קח אותי לסופר</string>
    <string name="inventory_btn">מלאי ביתי</string>
    <string name="category_name">שם קטגוריה</string>
    <string name="category">קטגוריה</string>
    <string name="show_all">הצג הכל</string>
    <string name="for_categories">לקטגוריות</string>
    <string name="remove_item">הסר מוצר</string>
    <string name="expiration_date">תאריך תפוגה</string>
    <string name="product_name">שם מוצר</string>
    <string name="barcode">בר קוד</string>
    <string name="default_date">00.00.0000</string>
    <string name="Expired">פג תוקף</string>
    <string name="add_product_manually">ידנית</string>
    <string name="add_product_barcode">בר קוד</string>
    <string name="manage_user">ניהול משתמשים</string>
    <string name="add_user">הוספת משתמש למאגר</string>
    <string name="add_product">הוסף מוצר</string>
    <string name="quantity">כמות</string>
    <string name="fill_details_to_add_product">מלא פרטים להוספת המוצר</string>
    <string name="valid_input_product_name">שם המוצר חייב להכיל אותיות ולא יותר מ-50 תווים</string>
    <string name="valid_input_product_barcode">ברקוד חייב להכיל 8-13 ספרות</string>
    <string name="valid_input_please_select_a_category_from_the_list">נא לבחור קטגוריה מהרשימה</string>
    <string name="valid_input_quantity_must_be_between_and">כמות חייבת להיות בין 1 ל-999</string>
    <string name="valid_input_please_select_a_valid_expiration_date">נא לבחור תאריך תפוגה תקין</string>
    <string name="added_successfully">המוצר %1$s נוסף בהצלחה!</string>
    <string name="product_not_added">המוצר כבר קיים במלאי</string>
    <string name="search">חפש</string>
    <string name="enter_product_name">אנא הכנס שם מוצר לחיפוש</string>
    <string name="product_not_found">המוצר לא נמצא במלאי</string>
    <string name="product_found">מוצר נמצא</string>
    <string name="similar_products_found">נמצאו מוצרים דומים</string>
    <string name="ok">אישור</string>
    <string name="name">שם</string>
    <string name="identification_via_email">הזדהות באמצעות אימייל</string>
    <string name="identification_via_sms">הזדהות באמצעות SMS</string>
    <string name="define_profile_image">הגדר תמונת פרופיל</string>
    <string name="logout">התנתקות</string>
    <string name="invalid_first_name">שם פרטי לא תקין</string>
    <string name="invalid_last_name">שם משפחה לא תקין</string>
    <string name="invalid_email">כתובת אימייל לא תקינה</string>
    <string name="invalid_user_name">שם משתמש לא תקין</string>
    <string name="password_must_contain_at_least">סיסמה חייבת להכיל לפחות 6 תווים, אות אחת ומספר אחד</string>
    <string name="mismatched_passwords">סיסמאות לא תואמות</string>
    <string name="user_name_already_exist">שם משתמש כבר קיים במערכת</string>
    <string name="registration_success">ההרשמה הושלמה בהצלחה!</string>
    <string name="registration_failed">ההרשמה נכשלה. אנא נסה שוב.</string>
    <string name="please_enter_an_email">נא להזין אימייל</string>
    <string name="please_enter_an_password">נא להזין סיסמה</string>
    <string name="no_user_information_found">לא נמצאו פרטי משתמש</string>
    <string name="error_loading_user_information">שגיאה בטעינת פרטי משתמש: %1$s</string>
    <string name="please_enter_an_email_to_restore_your_password">נא להזין אימייל לשחזור סיסמה</string>
    <string name="password_reset_instructions_sent_to_your_email">הוראות לאיפוס סיסמה נשלחו לאימייל שלך</string>
    <string name="error_sending_password_reset_email">שגיאה בשליחת אימייל לאיפוס סיסמה</string>
    <string name="login_error">שגיאה בהתחברות</string>
    <string name="login_failed">התחברות נכשלה</string>
    <string name="google_maps_key">AIzaSyChoF2M-vuYWlyMRd-vFRkvHddRHcT1PSY</string>
    <string name="choose_supermarket_name">בחר רשת סופר</string>
    <string name="find_closer_supermarket_to_you">חפש את הסופר הקרוב ביותר אליך</string>
    <string name="guest">אורח</string>
    <string name="no_user_loged_in">משתמש לא מחובר</string>
    <string name="camera_permission_is_required_to_scan_a_barcode">הרשאת מצלמה נדרשת לסריקת ברקוד</string>
    <string name="please_scan_barcode_first">נא לסרוק ברקוד תחילה</string>
    <string name="do_not_turn_on_the_camera">לא ניתן להפעיל את המצלמה</string>
    <string name="barcode_scanning_failed">Barcode scanning failed: %1$s</string>
    <string name="error_checking_inventory">שגיאה בבדיקת המלאי: %1$s</string>
    <string name="error_checking_product_repository">Error checking product repository: %1$s</string>
    <string name="error_checking_product_database">שגיאה בבדיקת מאגר המוצרים: %1$s</string>
    <string name="product_is_in_repository">מוצר נמצא במאגר</string>
    <string name="unknown_product">מוצר לא ידוע</string>
    <string name="founded_the_product_X_do_you_want_to_add_it_to_your_inventory">נמצא המוצר: %1$s\nהאם ברצונך להוסיף אותו למלאי שלך?</string>
    <string name="add">הוסף</string>
    <string name="cancel">בטל</string>
    <string name="edit_details">ערוך פרטים</string>
    <string name="product_is_in_inventory">מוצר קיים במלאי</string>
    <string name="the_product_is_already_in_your_inventory_do_you_want_to_increase_the_quantity">המוצר %1$s כבר קיים במלאי שלך. האם ברצונך להגדיל את הכמות?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="product_quantity_updated_successfully">כמות המוצר עודכנה בהצלחה</string>
    <string name="error_updating_product_quantity">שגיאה בעדכון כמות המוצר: %1$s</string>
    <string name="add_manually">הוסף ידנית</string>
    <string name="new_product">מוצר חדש</string>
    <string name="barcode_founded_X_do_you_want_to_add_a_new_product_to_inventory">נמצא ברקוד: %1$s\nהאם ברצונך להוסיף מוצר חדש למלאי?</string>
    <string name="product_added_successfully">המוצר נוסף בהצלחה</string>
    <string name="error_adding_product">שגיאה בהוספת המוצר: %1$s</string>
    <string name="gallery_access_permission_is_required_to_select_a_product_image">הרשאת גישה לגלריה נדרשת לבחירת תמונת מוצר</string>
    <string name="camera_access_permission_is_required_to_select_a_product_image">הרשאת מצלמה נדרשת לצילום תמונת מוצר</string>
    <string name="error_uploading_product_image">שגיאה בהעלאת תמונת המוצר: %1$s</string>
    <string name="adding">מוסיף...</string>
    <string name="error_opening_the_gallery">שגיאה בפתיחת הגלריה</string>
    <string name="error_opening_the_camera">שגיאה בפתיחת המצלמה</string>
    <string name="error_creating_temporary_camera_file">שגיאה ביצירת קובץ זמני למצלמה</string>
    <string name="error_loading_user_data">שגיאה בטעינת נתוני משתמש: %1$s</string>
    <string name="error">שגיאה: %1$s</string>
    <string name="the_image_was_uploaded_successfully">התמונה הועלתה בהצלחה</string>
    <string name="error_uploading_image">שגיאה בהעלאת התמונה: %1$s</string>
    <string name="password_reset_instructions_have_been_sent_to_your_email_address">הוראות לאיפוס סיסמה נשלחו לכתובת האימייל שלך</string>
    <string name="error_sending_reset_instructions">שגיאה בשליחת הוראות איפוס: %1$s</string>
    <string name="no_email_address_found">לא נמצאה כתובת אימייל</string>
    <string name="details_updated_successfully">הפרטים עודכנו בהצלחה</string>
    <string name="error_updating_details">שגיאה בעדכון הפרטים: %1$s</string>
    <string name="photograph">צלם</string>
    <string name="no_products_were_found_in_category_X_for_the_search_term">לא נמצאו מוצרים בקטגוריה \'%1$s\' למילת החיפוש \'%2$s\'</string>
    <string name="show_shopping_list">הצג רשימה</string>
    <string name="search_for_a_product_in_the_product_list">חיפוש מוצר ברשימת מוצרים</string>
    <string name="shopping_list_is_empty">רשימת הקניות ריקה</string>
    <string name="product_added_successfuly_to_shopping_list">המוצר %1$s נוסף לרשימת הקניות</string>
    <string name="error_adding_product_to_shopping_list">שגיאה בהוספת המוצר: %1$s</string>
    <string name="unknown_reason">סיבה לא ידועה</string>
    <string name="num_of_product_in_list">פריטים ברשימה: 0</string>
    <string name="my_shopping_list">רשימת הקניות שלי</string>
    <string name="create_shopping_list">יצירת רשימת קניות</string>
    <string name="adding_by_barcode">הוספה עם ברקוד</string>
    <string name="adding_manual">הוספה ידנית</string>
    <string name="there_are_no_products_from_this_category">אין כרגע מוצרים מקטגוריה זו</string>
    <string name="apple">תפוח עץ זהוב</string>
    <string name="tomatos">עגבניות</string>
    <string name="coca_cola_1_5_liters">קוקה קולה 1.5 ליטר</string>
    <string name="water_neviot">מים מינרליים נביעות</string>
    <string name="chicken">חזה עוף טרי</string>
    <string name="fresh_salmon">סלמון טרי</string>
    <string name="tnuva_milk_3_precent">חלב תנובה 3%</string>
    <string name="cotege_5_precent_tnuva">קוטג\' תנובה 5%</string>
    <string name="engel_white_bread">לחם לבן של אנג\'ל</string>
    <string name="lahmaniot">לחמניות המאפייה</string>
    <string name="milk_chocolate">שוקולד פרה חלב</string>
    <string name="bisli_onion">ביסלי בטעם בצל</string>
    <string name="freeze_pizza">פיצה קפואה</string>
    <string name="vanilla_ice_cream">גלידה וניל</string>
    <string name="successfully_created_repository_with_products">נוצר בהצלחה אוסף RepositoryOfProducts עם %1$d מוצרים</string>
    <string name="error_creating_RepositoryOfProducts_collection">שגיאה ביצירת אוסף RepositoryOfProducts</string>
    <string name="we_need_pemission_for_camera">אנחנו צריכים גישה למצלמה כדי לצלם תמונת מוצר</string>
    <string name="we_need_permission_for_gallery">אנחנו צריכים גישה לגלריה כדי לבחור תמונת מוצר</string>
    <string name="permission_required">נדרשת הרשאה</string>
    <string name="accept">אישור</string>
    <string name="enter_query_search">נא להזין מילת חיפוש</string>
    <string name="no_products_found_matching_your_search">לא נמצאו מוצרים התואמים לחיפוש</string>
    <string name="search_result">תוצאות חיפוש: %1$s</string>
    <string name="camera_permission_is_required_to_take_a_profile_picture">נדרשת הרשאת מצלמה לצילום תמונת פרופיל</string>
    <string name="gallery_permission_is_required_to_choose_a_profile_picture">נדרשת הרשאת גלריה לבחירת תמונת פרופיל</string>
    <string name="name_can_not_be_null">השם אינו יכול להיות ריק</string>
    <string name="last_name_can_not_be_null">שם המשפחה אינו יכול להיות ריק</string>
    <string name="are_you_sure_you_want_to_logout">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="choose_image_profile">בחר תמונת פרופיל</string>
    <string name="camera">מצלמה</string>
    <string name="gallery">גלריה</string>
    <string name="unable_to_create_a_camera_image_URI">לא ניתן ליצור URI לתמונת מצלמה</string>
    <string name="error_opening_camera">שגיאה בפתיחת המצלמה: %1$s</string>
</resources>