<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_CV_headerCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/template_header"
        app:cardBackgroundColor="@color/blue"
        android:layout_marginBottom="28dp"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.card.MaterialCardView>

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_IMG_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/default_margin_8"
        android:src="@drawable/app_logo_no_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 'Welcome to' -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_TV_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_welcome_to_txt"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_IMG_logo" />

    <!-- SmartFridge -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_TV_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_TV_welcome" />

    <!-- Registration Form -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_TV_app_name"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- First Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Last Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_TIL_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_8"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_ET_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_BTN_submit"
            android:layout_width="@dimen/BTN_width"
            android:layout_height="@dimen/BTN_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_8"
            android:backgroundTint="@color/blue"
            android:padding="@dimen/default_padding_8"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_txt_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/BTN_cornerRadius" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>