<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <!-- Header Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_CV_headerCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/template_header"
        android:layout_marginBottom="28dp"
        app:cardBackgroundColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/login_TIL_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- back button  -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_back"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|top"
            android:layout_margin="8dp"
            app:icon="@drawable/arrow_back"
            app:iconTint="@color/black" />

    </com.google.android.material.card.MaterialCardView>

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_IMG_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/default_margin_8"
        android:src="@drawable/app_logo_no_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Welcome -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_TV_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_welcome_to_txt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_IMG_logo" />

    <!-- SmartFridge -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_TV_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_TV_welcome" />

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_TIL_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_TV_app_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_ET_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_TIL_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_TIL_username">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_ET_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- שכחתי סיסמא -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_8"
        android:layout_marginEnd="24dp"
        android:text="@string/forgot_password"
        android:textColor="@color/simple_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_TIL_password" />

    <!-- כפתור התחבר -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_login"
        android:layout_width="@dimen/BTN_width"
        android:layout_height="@dimen/BTN_height"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/default_padding_8"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_txt_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/BTN_cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_BTN_forgot_password" />

    <!-- No account? Register -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_BTN_login">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_do_not_have_an_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_for_register_press_here"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_registration_press_here"
            android:textColor="@color/simple_blue" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>